[package]
name = "txs-cloud"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = { version = "2.0.0", features=["rustls"] }
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
awc = "1.0.1"
env_logger = "0.6"
futures = "0.3.1"
bytes = "0.5.3"
rustls = "0.16"
webpki-roots = "0.19.0"