[package]
name = "moneditas"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-codec = "0.2.0"
actix-web = { version = "2.0.0", features = ["rustls"] }
actix-web-actors = "2.0.0"
actix-files = "0.2.2"
actix-rt = "1.1.1"
awc = "1.0.1"
env_logger = "0.7.1"
futures = "0.3.5"
bytes = "0.5.5"
# We need this specific version
rustls = "0.16"
webpki-roots = "0.19.0"
uuid = { version = "0.8.1", features = ["v4"] }